attemp to fix h6 spacing on legacy browser

--- a/assets/css/typesetting/sectioning.css
+++ b/assets/css/typesetting/sectioning.css
@@ -59,8 +59,11 @@ h6 {
 }
 
 h6 {
+    position: relative;
     float: left;
-    margin: 0.2em 0.2em 0 0;
+    margin: 0;
+    padding: 0.2em 0.5em 0 0;
+    line-height: 1;
 }
 
 /* section labeling */
